--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,32 +2,89 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+#loginArea {
+  background-image: url(./images/BannerPhoto1.gif);
+  height: 1020px;
+  background-size: cover;
+  background-position: center;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#headerLogo {
+  width: 100%;
+  padding-top: 20px;
+}
+
+#imageLogo {
+  width: 40%;
+  height: auto;
+}
+
+#registerB {
+  margin: 5px;
+  background: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  border: 4px solid black;
+  border-radius: 0;
+  color: black;
+  width: 300px;
+}
+
+#loginB {
+  margin: 5px;
+  background: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  border: 4px solid black;
+  border-radius: 0;
+  color: black;
+  width: 300px;
+}
+
+#subscDiv {
+  text-align: right;
+}
+
+#loginDiv {
+  text-align: left;
+}
+
+#navArea {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+#howTitle {
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#stepOne {
+  border: 4px solid black;
+  margin-bottom: 20px;
+}
+
+#stepTwo {
+  border: 4px solid black;
+  margin-bottom: 20px;
+}
+
+#stepThree {
+  border: 4px solid black;
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+  #subscDiv {
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  #loginDiv {
+    text-align: center;
+  }
+
+  #loginArea{
+    height: 250px;
   }
 }
